# Sre-Agent

./: .gitignore  CONTRIBUTING.md  README.md  env.example  main.py  pyproject.toml  slack_bot.py
config/: settings.py
examples/: demo_investigation.py
src/claude/: prompts.py  reasoning.py
src/core/: orchestrator.py  parser.py
src/correlation/: engine.py
src/datadog/: client.py  fetcher.py
src/formatters/: report.py
src/investigation/: analysis.py  breadth.py  depth.py  discovery.py  engine.py  execution.py  helpers.py  rules.py
src/models/: incident.py
src/rca/: engine.py
src/slack/: handler.py  incident_builder.py  parser.py  utils.py
src/utils/: time.py
tests/: conftest.py  test_analysis.py  test_correlation.py  test_depth.py  test_discovery.py  test_formatter.py  test_helpers.py  test_incident_builder.py  test_investigation_rules.py  test_rca_engine.py  test_report_improvements.py  test_signal_quality.py  test_slack_parser.py  test_time_utils.py
